--- a/static/gadgets/histogramView.html
+++ b/static/gadgets/histogramView.html
@@ -59,7 +59,7 @@ function setSelectedColor(obj) {
 		useColor = '';
 	}
 	var ds = gadget.dashboard.getDataSet(getSelectedDataset());
-	ds.setRecordsMetaData({'color': useColor}, obj.modifiedPointIds);
+	ds.setRecords({'color': useColor}, obj.modifiedPointIds);
    gadget.notify('dataSetListChanged');
 	return;
 }
@@ -173,13 +173,12 @@ function parseData(args) {
 	var colorIndexArray = ds.getIndex('color');
              
  	var graphData = [];
-	var dsData = ds.getRecords();
 	for (i=0,len=dsData.length; i<len; i++) {
-		var xVal = parseFloat(dsData[i][getSelectedXAxis()]);
+		var xVal = parseFloat(ds.getRecord(i)[getSelectedXAxis()]);
 		// each point has unique id so a pointer to point can be had by chart.get(id)
-   	var id = dsData[i]["id"];
+   	var id = ds.getRecord(i)["id"];
    	if (xVal !== NaN){
-   		graphData.push({id: id, x: xVal, color: dsData[i].metaData.color });
+   		graphData.push({id: id, x: xVal, color: ds.getRecord(i).color });
   		}
   	}
   	
