Fixing gadget state load

--- a/static/gadgets/dataInquirer.html
+++ b/static/gadgets/dataInquirer.html
@@ -43,12 +43,11 @@ var viewportBounds;
 var currentQuery = {};
 
 // create HR object
-gadget.init = function(callback){
+gadget.init = function(finishedLoading){
   gadget.onNotification('viewBoundsChanged', setViewPortBounds);
   gadget.onNotification('dataRequested', launchQuery);
   setFields();
-  gadget.inflateState();
-  callback();
+  finishedLoading();
 }
 
 gadget.saveState = function(){
