--- a/static/gadgets/plotView.html
+++ b/static/gadgets/plotView.html
@@ -230,7 +230,6 @@ function setSelectedByMinMax(obj) {
   if(selectedIds.length > 0){
     color = (selectedMarkerColor === "unselect") ? "grey" : selectedMarkerColor;
     selectedDataSet.setRecords({'color': color}, selectedIds); 
-    plot.redraw();
   }
    
 }
@@ -335,7 +334,7 @@ function generatePoints(){
                     x: xValue, 
                     y: yValue,
                     color: MARKER_COLOR[selectedDataSet.getRecord(i).color],
-                    marker: MARKER_COLOR[selectedDataSet.getRecord(i).color]
+                    marker: { fillColor: MARKER_COLOR[selectedDataSet.getRecord(i).color] } 
                   });
     }
   }
