--- a/static/gadgets/FITSViewer_PDR.html
+++ b/static/gadgets/FITSViewer_PDR.html
@@ -127,12 +127,12 @@ function updateSelectedPoints() {
  	if (ds === undefined || ds === null) {
 	 	return;
 	 }
- 	var colorIndexArray = ds.getIndex('color');
+ 	var colorIndexArray = ds.getAttributeValues('color');
  	var colorIndex;
  	var point;
  	
- 	for (color in colorIndexArray) {
- 		colorIndex = colorIndexArray[color];
+ 	for(var j = 0; j < colorIndexArray.length; ++j){
+ 		colorIndex = getRecordsIndicesWithAttribute('color', colorIndexArray[j]);
  		for (var i = 0; i < colorIndex.length; i++) {
  			point = objectsToDraw[colorIndex[i]];
  			colorChartPoint(point,color);
