--- a/static/gadgets/FITSViewer_PDR.html
+++ b/static/gadgets/FITSViewer_PDR.html
@@ -114,7 +114,7 @@ function setSelectedColor(obj) {
 		useColor = '';
 	}
 	var ds = gadget.dashboard.getDataSet(getSelectedDataset());
-	ds.setRecordsMetaData({'color': useColor}, obj.modifiedPointIds); 
+	ds.setRecords({'color': useColor}, obj.modifiedPointIds); 
 	gadget.notify('dataSetChanged');
 	return;
 }
