fixin small bug in pdr fits viewer

--- a/static/gadgets/FITSViewer_PDR.html
+++ b/static/gadgets/FITSViewer_PDR.html
@@ -146,7 +146,9 @@ function updateSelectedPoints() {
      if (colorName === "") {
          colorName = "unselect";
      }
-     point.color = MARKER_COLOR[colorName];
+     if(point){
+       point.color = MARKER_COLOR[colorName];
+    }
  }
 
 function getSelectedDataset() {
