Changing dashboard styles

--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -15,6 +15,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
 <script type="text/javascript">
 
