--- a/public/gadgets/skyView.html
+++ b/public/gadgets/skyView.html
@@ -8,6 +8,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
 <script src="http://google.com/jsapi?key=ABQIAAAAVGHgv2pouycqhAw5tCmtChR1aol8vC9LmxJ_-IIqPo0vb4nybRTh6avLgiFPsdQwzEmpcYDE1DLlcA" type="text/javascript"></script>
