--- a/public/gadgets/ASCIIDataLoader.html
+++ b/public/gadgets/ASCIIDataLoader.html
@@ -7,7 +7,8 @@
 <title>ASCIIDataLoader</title>
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
-<link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/text.css" rel="stylesheet" type="text/css">
+<link href="/css/widgets.css" rel="stylesheet" type="text/css">  
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
 <script src="/util.js" type="text/javascript"></script>
