--- a/public/gadgets/FITSViewer.html
+++ b/public/gadgets/FITSViewer.html
@@ -8,6 +8,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 <script src="/kinetic-v1.0.2.js" type="text/javascript"></script>
