--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -9,6 +9,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script> 
 
@@ -280,11 +281,10 @@ function populateSelect(selectName, options) {
 		<br/> 
 		<textarea id="txtQueryString" rows="5" style="width:99%;"></textarea>
 		<br/>
-		<input id="btGetData" onclick="getData();" type="button" value="Submit"/>  
+		<input id="btGetData" onclick="getData();" type="button" value="Submit"/> 
+		<input type="button" value="LSST Query" onclick="makeSQLRequest();"> 
 		<div id="divStatusText" style="display: inline; margin-left: 10px"></div> 
 	</div>
 </div>
-
-<input type="button" value="LSST Query" onclick="makeSQLRequest();">
 </body>
 </html>
