--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -13,6 +13,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
 <style type="text/css">
 td{
