--- a/public/gadgets/scalableScatter.html
+++ b/public/gadgets/scalableScatter.html
@@ -8,6 +8,7 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
 <script src="/highcharts.src.js" type="text/javascript"></script>
