Polishing out UI style

--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -498,7 +498,7 @@ function invertY(){
         Selection Color: <select id="selectColor"></select>
         <input type="radio" id="radioSelect" name="radSelectZoom" value="select" checked="checked" /><label for="radSelect">Select</label>
         <input type="radio" id="radioZoom" name="radSelectZoom" value="zoom" /><label for="radZoom">Zoom</label>
-        Info: <input type="checkbox" id="checkVerboseInfo" value="0"/>
+        <input type="checkbox" id="checkVerboseInfo" value="0"/><label for="checkVerboseInfo">Verbose Info</label> 
       </div>
     </form>
   </div>
