--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -12,6 +12,7 @@
 <link href="/css/widgets.css" rel="stylesheet" type="text/css"> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
 <script src="/util.js" type="text/javascript"></script> 
+<script src="/xhr.js" type="text/javascript"></script> 
 
 <script type="text/javascript">
 // Text in {{ }} such as " {{ra.lower}}" are substituted in setQueryText() method
@@ -142,9 +143,8 @@ var setQueryText = function(buttonNumber) {
 
 function makeGETRequest(url, query, callback) {
   var params = {};
-  //console.log(encodeURIComponent(url + '?format=xml&cmd=' + encodeURIComponent(query)));
-  $.ajax({
-   'url': '/XMLHttpRequest/' + encodeURIComponent(url + '?format=xml&cmd=' + encodeURIComponent(query)),
+  UW.ajax({
+    'url': url + '?format=xml&cmd=' + encodeURIComponent(query),
     success: callback 
   });
 }
