--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -11,6 +11,7 @@
   
 <!-- Astro scripts -->
 <script src="/util.js" type="text/javascript"></script>
+<script src="/xhr.js" type="text/javascript"></script> 
 
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/reset.css" rel="stylesheet" type="text/css">
@@ -153,9 +154,8 @@ var getCoordinates = function(coordinatesString){
 
 
 var makeRequestGet = function(url){
-  var service =    
-  $.ajax({
-  'url': '/XMLHttpRequest/' + encodeURIComponent(url),
+  UW.ajax({
+  'url': url,
   success: parseResponse });
 };
 
