--- a/public/gadgets/plotView.html
+++ b/public/gadgets/plotView.html
@@ -487,6 +487,7 @@ function invertY(){
 </head>
 <body>
 <div id="content">
+  <div>Dataset: <select id="selectDatasetName"></select></div>
   <div id="divSelectDataset" style="display: inline"> 
     X Axis: <input id="invertXAxisButton" type="button" title="Invert X Axis" value=">"></input> <select id="selectXAxis"></select>
      Y Axis: <input id="invertYAxisButton" type="button" title="Invert Y Axis" value="^"></input> <select id="selectYAxis"></select>
